--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,10 @@
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.6.*",
+        "laravel/passport": "^5.0",
         "laravel/tinker": "^1.0",
+        "spatie/laravel-fractal": "^5.3",
+        "unisharp/laravel-settings": "^2.0",
         "webpatser/laravel-uuid": "2.*"
     },
     "require-dev": {
