--- a/composer.json
+++ b/composer.json
@@ -62,6 +62,8 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "post-install-cmd": [
+        "php artisan clear-compiled",
+        "php artisan optimize",
         "chmod -R 777 public/"
     ]
 }
